k8s_conf/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: mygo-service
  #labels:
spec:
  ports:
    - port: 8090
      name: mygo-service
      targetPort: 8080 # dockerfile 中暴露出来的端口。最初的镜像容器的端口
      nodePort: 30000 # type 为 NodePort时 外部机器可访问的端口
  selector:
    app: mygo
  type: NodePort
