k8s_conf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: test.mygo-svc.com
      http:
        paths:
          - path: / #/app(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: mygo-service
                port:
                  number: 8090
